--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <header>
+      <img src="img/Logo.png" alt="" />
+      <h1>Campo Minato</h1>
+    </header>
+    <main>
+      <div class="board">
+        <div class="cell">1</div>
+        <div class="cell">1</div>
+        <div class="cell">1</div>
+        <div class="cell">1</div>
+        <div class="cell">1</div>
+        <div class="cell">1</div>
+        <div class="cell">1</div>
+        <div class="cell">1</div>
+        <div class="cell">1</div>
+        <div class="cell">1</div>
+        <div class="cell">1</div>
+        <div class="cell">1</div>
+        <div class="cell">1</div>
+        <div class="cell">1</div>
+        <div class="cell">1</div>
+      </div>
+    </main>
+    <footer>
+      <p>Made with by Boolean</p>
+    </footer>
     <script src="js/main.js"></script>
   </body>
 </html>
