--- a/index.html
+++ b/index.html
@@ -8,27 +8,16 @@
   </head>
   <body>
     <header>
-      <img src="img/Logo.png" alt="" />
-      <h1>Campo Minato</h1>
+      <div class="sx">
+        <img src="img/Logo.png" alt="" />
+        <h1>Campo Minato</h1>
+      </div>
+      <div class="dx">
+        <div class="btn-play">Play</div>
+      </div>
     </header>
     <main>
-      <div class="board">
-        <div class="cell">1</div>
-        <div class="cell">1</div>
-        <div class="cell">1</div>
-        <div class="cell">1</div>
-        <div class="cell">1</div>
-        <div class="cell">1</div>
-        <div class="cell">1</div>
-        <div class="cell">1</div>
-        <div class="cell">1</div>
-        <div class="cell">1</div>
-        <div class="cell">1</div>
-        <div class="cell">1</div>
-        <div class="cell">1</div>
-        <div class="cell">1</div>
-        <div class="cell">1</div>
-      </div>
+      <div class="board"></div>
     </main>
     <footer>
       <p>Made with by Boolean</p>
