feat: personalizz. quando non presente la tab

--- a/index.html
+++ b/index.html
@@ -7,21 +7,33 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- Header -->
     <header>
       <div class="sx">
-        <img src="img/Logo.png" alt="" />
+        <img src="img/Logo.png" alt="logo" />
         <h1>Campo Minato</h1>
       </div>
       <div class="dx">
         <div class="btn-play">Play</div>
       </div>
     </header>
+    <!-- Header -->
+    <!-- Main -->
     <main>
-      <div class="board"></div>
+      <div class="initial-main">
+        <img src="img/real-campominato.png" alt="campo-minato" />
+        <h3>Rivisitazione del famosissimo videogioco</h3>
+        <h2>Campo Minato</h2>
+      </div>
+      <div class="board hidden"></div>
     </main>
+    <!-- Main -->
+    <!-- Footer -->
     <footer>
       <p>Made with by Boolean</p>
     </footer>
+    <!-- Footer -->
+
     <script src="js/main.js"></script>
   </body>
 </html>
