feat: selezione celle

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
         <h1>Campo Minato</h1>
       </div>
       <div class="dx">
+        <div class="difficolta">
+          <label for="ciao">Difficoltà: </label>
+          <select name="" id="">
+            <option value="">Facile</option>
+            <option value="">Normale</option>
+            <option value="">Difficle</option>
+          </select>
+        </div>
         <div class="btn-play">Play</div>
       </div>
     </header>
