feat: style footer

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Main -->
     <!-- Footer -->
     <footer>
-      <p>Made with by Boolean</p>
+      <p>Made with <span>♥</span> by <a href="#">Boolean</a></p>
     </footer>
     <!-- Footer -->
 
