feat: adattamento griglia/difficoltà

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       </div>
       <div class="dx">
         <div class="difficolta">
-          <label for="ciao">Difficoltà: </label>
-          <select name="" id="">
-            <option value="">Facile</option>
-            <option value="">Normale</option>
-            <option value="">Difficle</option>
+          <label for="difficolta">Difficoltà: </label>
+          <select name="" id="select-difficolta">
+            <option value="facile">Facile</option>
+            <option value="normale">Normale</option>
+            <option value="difficile">Difficle</option>
           </select>
         </div>
         <div class="btn-play">Play</div>
