feat: pulizia codice, uso di un altra funz

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <select name="" id="select-difficolta">
             <option value="facile">Facile</option>
             <option value="normale">Normale</option>
-            <option value="difficile">Difficle</option>
+            <option value="difficile">Difficile</option>
           </select>
         </div>
         <div class="btn-play">Play</div>
